--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -173,7 +173,7 @@ $(document).on('turbolinks:load', function(){
             <div class='clearfix'></div>
             <p>The following breeds of cats are not transported:</p>
             
-            <ul class='col-12'>
+            <ul class='col-12 sf'>
                 <li>Burmese</li>
                 <li>Exotic</li>
                 <li>Himalayan</li>
