--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,6 +17,7 @@
         background-color:rgba(0, 0, 0, 0.5);
         transition:padding .5s cubic-bezier(.23,1,.32,1);
         display:inline-block;
+        box-shadow: 2px 2px 4px black;
     } 
 
     div.active-search.off {
@@ -34,6 +35,7 @@
     div.search-box button.button-col-xs-10 {
         display:inline-block;
         width:13%;
+        min-width:60px;
         padding: 10px 0px 10px 0px;
         font-size:12px;
         background:#45106e;
@@ -465,7 +467,7 @@ fieldset[disabled] .twitter-typeahead .tt-input {
         text-align:center;
         width:95%;
         padding:10px;
-        margin-top:0px;
+        margin:0px;
     }
     section h3.col-m-2 {
         text-align:left;
@@ -484,12 +486,15 @@ fieldset[disabled] .twitter-typeahead .tt-input {
         width:30%;
         display:inline-block;
         height:200px;
-        border:solid 1px black;
         margin:10px;
+        border:groove 1px #8828ab;
+        box-shadow: 2px 2px 4px #000;
+        position:relative;
     }
 
     section div.section-ad {
-        height:100px;
+        height:90px;
+        text-align:center;
         max-width:1200px;
         width:90%;
         border:solid 1px black;
@@ -584,7 +589,6 @@ fieldset[disabled] .twitter-typeahead .tt-input {
             width:30%;
             display:inline-block;
             height:200px;
-            border:solid 1px black;
             margin:5px 0px 5px 10px;
         }
     }
@@ -677,14 +681,15 @@ fieldset[disabled] .twitter-typeahead .tt-input {
             width:100%;
             list-style-type: none;
             padding:0px;
+            display:inline-block;
         }
 
         section ul li.col-m-3 {
             width:95%;
-            display:block;
+            display:inline-block;
             height:200px;
-            border:solid 1px black;
             margin:10px;
+            
         }
 
 
