--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,97 @@
+<style>
+    ul.col-12.review {
+        list-style-type:none;
+        padding:0px;
+        width:100%;
+    }
+    
+    ul.col-12.review li {
+        padding:5px;
+        display:inline-block;
+        position:relative;
+    }
+    span.col-4, span.col-8 {
+        display:inline-block;
+        font-size:12px;
+    }
+    span.col-4 {
+        text-align:right;
+    }
+    ul.col-12.review svg {
+        margin:0 auto;
+        height:30px;
+    }
+    img.cust-img {
+        width:100%;
+        height:100%;
+        position:absolute;
+        top:0px;
+        left:0px;
+    }
+    div.overlay-m-3 {
+        position:absolute;
+        top:0px;
+        right:0px;
+        height:200px;
+        width:180px;
+        text-align:center;
+        text-shadow: 1px 1px 3px black;
+        background-color: rgba(0,0,0,0.5);
+        background: linear-gradient(to right, transparent 0%, rgba(0,0,0,0.5) 20%);
+        color:white;
+        font-family:coolvetica, sans-serif;
+    }
+    div.overlay-m-3 h4 {
+        padding:5px 5px 5px 25px;
+        margin:20px 0px;
+        font-size:1.4em;
+        font-family:"caviar dreams", sans-serif;
+        font-weight:bolder;
+    }
+    div.overlay-m-3 p {
+        padding:5px 5px 5px 25px;
+        margin:10px 0px;
+        font-size:1em;
+    }
+    div.overlay-m-3-l {
+        position:absolute;
+        top:0px;
+        left:0px;
+        z-index:1;
+        height:100%;
+        width:100%;
+        background-color:#FFF;
+        visibility:hidden;
+        opacity: 0;
+        transition: 0.2s;
+    }
+    a.overlay-m:hover div.overlay-m-3-l{
+        visibility:visible;
+        opacity: 0.2;
+    }
+    @media only screen and (max-width : 750px) {
+       ul.col-12.review li {
+            padding:5px;
+            display:block;
+            width:100%;
+            text-align:center;
+        } 
+        span.col-4 {
+            width:40px;
+            text-align:right;
+        }
+        span.col-8 {
+            position:relative;
+            top:-11px;
+            text-align:left;
+        }
+    }
+    @media only screen and (max-width : 480px) {
+       span.col-8 {
+            top:-5px;
+        } 
+    }
+</style>
 <div class='header-box'>
     <div class='container clearfix'>
         <div class='search-box'>
@@ -105,8 +199,6 @@
             <div id='All-search' class='active-search off'>
                 All search is under-construction
             </div>
-            
-            
         </div>
         <div class='search-box-ad'>
             ad content
@@ -117,53 +209,102 @@
 <div class='section-container'>
     <section>
          <div class='container-no-bg'>
+            <div class='col-12'>
+                <ul class='col-12 review'>
+                    <li class='col-4'>
+                        <span class='col-4'>
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="38px"
+                                 height="38px" viewBox="0 0 29 29" enable-background="new 0 0 38 38" xml:space="preserve">
+                            <g id="Layer_3">
+                                <path fill="#45106e" d="M14.5,0.286C6.648,0.286,0.285,6.651,0.285,14.5c0,7.851,6.363,14.214,14.215,14.214
+                                    c7.851,0,14.215-6.363,14.215-14.214C28.715,6.651,22.351,0.286,14.5,0.286z M12.891,21.434l-6.154-6.155l3.131-3.131l3.023,3.023
+                                    l6.347-6.347l3.131,3.132L12.891,21.434z"/>
+                            </g>
+                            </svg>
+                        </span>
+                        <span class='col-8'>
+                            Search over a million flights, hotels, packages, and more
+                        </span>
+                    </li>
+                    <li class='col-4'>
+                        <span class='col-4'>
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="38px"
+                                 height="38px" viewBox="0 0 29 29" enable-background="new 0 0 38 38" xml:space="preserve">
+                            <g id="Layer_3">
+                                <path fill="#45106e" d="M14.5,0.286C6.648,0.286,0.285,6.651,0.285,14.5c0,7.851,6.363,14.214,14.215,14.214
+                                    c7.851,0,14.215-6.363,14.215-14.214C28.715,6.651,22.351,0.286,14.5,0.286z M12.891,21.434l-6.154-6.155l3.131-3.131l3.023,3.023
+                                    l6.347-6.347l3.131,3.132L12.891,21.434z"/>
+                            </g>
+                            </svg>
+                        </span>
+                        <span class='col-8'>
+                            Secure incredible value with <strong>Tino's Price Guarantee</strong>
+                        </span>
+                    </li>
+                    <li class='col-4'>
+                        <span class='col-4'>
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="38px"
+                                 height="38px" viewBox="0 0 29 29" enable-background="new 0 0 38 38" xml:space="preserve">
+                            <g id="Layer_3">
+                                <path fill="#45106e" d="M14.5,0.286C6.648,0.286,0.285,6.651,0.285,14.5c0,7.851,6.363,14.214,14.215,14.214
+                                    c7.851,0,14.215-6.363,14.215-14.214C28.715,6.651,22.351,0.286,14.5,0.286z M12.891,21.434l-6.154-6.155l3.131-3.131l3.023,3.023
+                                    l6.347-6.347l3.131,3.132L12.891,21.434z"/>
+                            </g>
+                            </svg>
+                        </span>
+                        <span class='col-8'>
+                            <strong>No cancellation fee</strong> to change or cancel almost any hotel reservation
+                        </span>
+                    </li>
+                    
+                </ul>
+            </div>
+            
              <h3 class='col-m-3'>
-                Tino Stars
+                Today's News
              </h3>
               <ul class='col-m-3'>
                 <li class='col-m-3'>
-                 Picture of customer with pet 
+                    <%= link_to(top_deals_path, class:'overlay-m') do %>
+                        <div class='overlay-m-3-l'>
+                        </div>
+                        <%= image_tag("spring-savin.jpg", class: "cust-img", alt: "Top Deals") %>
+                        <div class='overlay-m-3'>
+                                <h4>Tino's Top Deals</h4>
+                                <p> Today's Sales</p>
+                            </div>
+                    
+                    <% end %>
                 </li>
                 <li class='col-m-3'>
-                 Picture of customer with pet 
+                    <%= link_to(pet_selfie_challenge_path, class:'overlay-m') do %>
+                        <div class='overlay-m-3-l'>
+                        </div>
+                        <%= image_tag("Annonymous_1.jpg", class: "cust-img", alt: "Annonymous") %>
+                        <div class='overlay-m-3'>
+                            <h4>Pet Selfie Competition</h4>
+                            <p> Get a chance to win a £10 Amazon GiftCard</p>
+                        </div>
+                    <% end %>
                 </li>
                 <li class='col-m-3'>
-                 Picture of customer with pet 
+                    
+                    <%= link_to(posts_path, class:'overlay-m') do %>
+                        <div class='overlay-m-3-l'>
+                            </div>
+                     <%= image_tag("dog-reading.jpg", class: "cust-img", alt: "Learn More about Travelling with your pet") %> 
+                        <div class='overlay-m-3'>
+                            <h4>Pet Travel Information</h4>
+                            <p> Learn more about travelling with your pet</p>
+                        </div>
+                    <% end %>
                 </li>
              </ul>
-             <h3 class='col-m-3'>
-                Recommended Flights
-             </h3>
-             <ul class='col-m-3'>
-                <li class='col-m-3'>
-                 Airlines 1 
-                </li>
-                <li class='col-m-3'>
-                 Airlines 2 
-                </li>
-                <li class='col-m-3'>
-                 Airlines 3
-                </li>
-             </ul>
-
-             <h3 class='col-m-3'>
-               Todays Sales
-             </h3>
-             <ul class='col-m-3'>
-                <li class='col-m-3'>
-                 Sale 1 
-                </li>
-                <li class='col-m-3'>
-                 Sale 2 
-                </li>
-                <li class='col-m-3'>
-                 Sale 3
-                </li>
-             </ul>
+             <div class='section-ad'>
+                ads go here
+            </div>
         </div>
-        <div class='section-ad'>
-            EVEN MORE ADSSS!!!
-        </div>
+        
         <h3 class='col-m-2'>
             Why Choose Tino?
         </h3>
@@ -174,6 +315,9 @@
         <p>
         Follow Tino on <a href='#'>Facebook</a>, <a href='#'>Twitter</a>, <a href='#'>Instagram</a>, and get travel tips & advice through the Tino Travel Blog.
         </p>
+        </div>
+        <div class='section-ad'>
+            EVEN MORE ADSSS!!!
         </div>
     </section>
 </div>
