--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,4 +1,12 @@
 <div class='container'>
+    <div class=''>
+        <%= form_tag search_posts_path, method: :get, class: "navbar-form", role: "search" do %>
+        <p>
+            <%= text_field_tag :search, params[:search], class: "search" %>
+            <%= submit_tag "Search", name: nil, class: "search" %>
+        </p>
+        <% end %>
+    </div>
     <% if @posts.empty? %>
     <div class='search-col-6'>
         <p>
