add adsense code to lit cove app to see if it works

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,12 +10,11 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
-
+  <%= f.file_field :image %>
   <div class="field">
     <%= f.label :body %>
     <%= f.text_area :body %>
