--- a/app/assets/stylesheets/search_flights.css.scss
+++ b/app/assets/stylesheets/search_flights.css.scss
@@ -5,10 +5,11 @@
         display:inline-block;
         background-image: image-url('paw_icon.png');
         background-position: 0px 0px;
-        background-size:35px;
+        background-size:45px;
         background-repeat:no-repeat;
-        height:35px;
-        width:35px;
+        height:45px;
+        width:45px;
+        margin:5px 0px 0px 0px;
     }
 
     div.side-left {
@@ -98,11 +99,11 @@
     
     div.expensive-flag-text {
         display:inline-block;
-        background-color:#ff944d;
+        background-color:#A31919;
         color:white;
         border-radius:5px;
         border:outset 1px #ffce99;
-        padding:2px;
+        padding:2px 10px 2px 10px;
         font-weight:bolder;
         font-family:sans-serif;
         box-shadow: 1px 1px 3px rgba(30,30,5,0.5);
