add google verification code in files

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -228,7 +228,7 @@
         </p>
         </div>
         <div class='section-ad'>
-            EVEN MORE ADSSS!!!
+            Ads go here
         </div>
     </section>
 </div>
