google verification code attempt 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         enable_page_level_ads: true
       });
     </script>
+    <meta name="google-site-verification" content="G8rOP4f1uy2qMTyq1Qm1e0Lge2BLY8-pBPOuwHUKBzc" />
   </head>
   <body>
    <%= render 'layouts/header'%>
