update look of site and change any tino content to Flyanima

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,5 @@
 $font_main: 'lato';
+$font_nav: 'coolvetica';
 $primary_color: #45106e;
 $nav_highlight: #8828ab;
 $top-nav_font_color: #BEBEBE;
@@ -119,13 +120,39 @@ div.container-no-bg {
 }
 
 header.top-header {
-    height:110px;
     background-color:white;
 }
 div.logo {
-    width:30%;
+    width:230px; 
     height:60px;
     float:left;
+}
+
+div.logo-image {
+    margin:10px;
+}
+div.logo-image img {
+    height:60px;
+    width:60px;
+}
+div.site-name {
+    display:inline-block;
+    vertical-align:top;
+    height:60px;
+}
+span.site-name {
+    display:inline-block;
+    font-size:2em;
+    font-family:code;
+    position:relative;
+    margin:18px 0px 0px 5px;
+    color:#45106e;
+}
+sup.tm {
+    position:absolute;
+    top:0px;
+    left:134px;
+    font-size:0.3em;
 }
 div.header-right{
     margin-top:12px;
@@ -178,7 +205,7 @@ ul.top-nav li {
 ul.top-nav li a {
     display:inline-block;
     text-decoration:none;
-    font-family:$font_main;
+    font-family:$font_nav;
     font-size: 12px;
     color: $top-nav_font_color;
     padding:8px 16px 11px 16px;
