--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class='container-no-bg'>
         
         <div class='f-content-1'>
-            <h3 class='col-title'>Tino.uk</h3>
+            <h3 class='col-title'>FlyAnima</h3>
             <ul>
                 <li>
                     <%= link_to 'Privacy policy', '/pages/legals/privacy_policy' =%>
@@ -12,7 +12,7 @@
                 <%= link_to 'Terms of use', '/pages/legals/terms_of_use' =%>
                 </li>
                 <li>
-                <%= link_to 'Contact', '/pages/contact' =%>
+                <%= link_to 'Contact', contact_path =%>
                 </li>
             </ul>
         </div> 
@@ -39,13 +39,13 @@
             <h3 class='col-title'>Destinations</h3>
             <ul>
                 <li>
-                <%= link_to 'Hotels', '#' =%>
+                <%= link_to 'Hotels', '/pages/hotels/home' =%>
                 </li>
                 <li>
                 <%= link_to 'Flights', '#' =%>
                 </li>
                 <li>
-                <%= link_to 'Deals', '#' =%>
+                <%= link_to 'Deals', top_deals_path =%>
                 </li>
             </ul>
         </div> 
@@ -53,19 +53,16 @@
         <div class='col-xs-4'>
             <ul>
                 <li>
-                <%= link_to 'Help', '#' %>
+                <%= link_to 'Help', '/pages/help/faq' %>
                 </li>
                 <li>
                 <%= link_to 'Follow Us', '#' %>
-                </li>
-                <li>
-                <%= link_to 'Contact Us', '#' %>
                 </li>
             </ul>
         </div>
         
         <div class='col-xs-4'>
-           <span>© Copyright Tino Ltd 2016</span> 
+           <span>© Copyright FlyAnima Ltd 2016</span> 
             <!-- <img width="126" height="33" src="//www.paypalobjects.com/webstatic/i/logo/rebrand/ppcom-white.svg" alt="PayPal" class="PayPal">
             -->
         </div>
