--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -147,7 +147,7 @@
                             </svg>
                         </span>
                         <span class='col-8'>
-                            Secure incredible value with <strong>Tino's Price Guarantee</strong>
+                            Secure incredible value with <strong>FlyAnima's Price Guarantee</strong>
                         </span>
                     </li>
                     <li class='col-4'>
@@ -181,7 +181,7 @@
                             <%= image_tag("spring-savin.jpg", class: "cust-img", alt: "Top Deals") %>
                         </div>
                         <div class='overlay-m-3'>
-                                <h4>Tino's Top Deals</h4>
+                                <h4>FlyAnima's Top Deals</h4>
                                 <p> Today's Sales</p>
                         </div>
                     
@@ -217,14 +217,14 @@
         </div>
         
         <h3 class='col-m-2'>
-            Why Choose Tino?
+            Why Choose FlyAnima?
         </h3>
         <div class='section-content-2'>
         <p>
-            At tino we know that there are people who love to travel. and that there are people who love their pets. We wanted to create a way for pet owners to travel and not leave thier pets behind. We are dedicated to making this dream come true. 
+            At FlyAnima we know that there are people who love to travel. and that there are people who love their pets. We wanted to create a way for pet owners to travel and not leave thier pets behind. We are dedicated to making this dream come true. 
         </p><br>
         <p>
-        Follow Tino on <a href='#'>Facebook</a>, <a href='#'>Twitter</a>, <a href='#'>Instagram</a>, and get travel tips & advice through the Tino Travel Blog.
+        Follow FlyAnima on <a href='#'>Facebook</a>, <a href='#'>Twitter</a>, <a href='#'>Instagram</a>, and get travel tips & advice through the FlyAnima Travel Blog.
         </p>
         </div>
         <div class='section-ad'>
